# GRB-Handbook

./: .gitignore  DATA_MODULES_SUMMARY.txt  GBMangles.ipynb  README.md  downlaod_data.py  pyproject.toml  requirements.txt  setup.py
config/: default.yaml  missions.yaml
grb_pipeline/: __init__.py  __main__.py
grb_pipeline/ai/: __init__.py  analysis_engine.py  gcn_intelligence.py  prompts.py  report_generator.py
grb_pipeline/analysis/: __init__.py  afterglow.py  classification.py  correlations.py  gbm_analysis.py  lightcurve.py  spectral.py  temporal.py
grb_pipeline/core/: __init__.py  config.py  constants.py  database.py  models.py
grb_pipeline/data/: __init__.py  downloaders.py  fermi_fetcher.py  gcn_parser.py  multimessenger.py  swift_fetcher.py
grb_pipeline/pipeline/: __init__.py  orchestrator.py  runner.py  stages.py
grb_pipeline/utils/: __init__.py  fits_utils.py  gbm_geometry.py  heasoft.py
grb_pipeline/visualization/: __init__.py  catalog_plots.py  spectral_plots.py  standard_plots.py
notebooks/: BAT_GRBCat_Bblocks.ipynb  GMM_Fermi.ipynb  GRBcrosscorr.ipynb  SwiftXRT_Fd_atEkeV.ipynb  demo_bat_lightcurves.ipynb  demo_gbm_geometry.ipynb  demo_gmm_classification.ipynb  demo_spectral_lag.ipynb  demo_xrt_flux_density.ipynb
tests/: conftest.py  test_core.py
